Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

============================
HYPERMAIL VERSION 2.5.0
============================

2021-11-09 Jose Kahan
	* src/parse.c
	MIME RFC1341 epilogues were not being ignored when they were made of
	more than newlines

2021-11-08 Jose Kahan
	* src/print.c
	Restoring in-reply-to and next-in-thread links to deleted messages.
	Removing them caused confusing in the archives. One small change
	w3t to 2.4.3: links now only display "deleted message" and not
	"(deleted message) subject" as previously.

2021-11-03 Jose Kahan
	* src/print.c src/print.h src/hypermail.h src/parse.c src/struct.c
	Improved the handling and displaying of message/rfc822
	attachments (closes #72).
	Rewrote parts of printbody() to improve how attachments are written
	when using showhtml and inlinehtml options.
	Encapsulating attachments within sections.

2021-10-15 Jose Kahan
	* Added the css class showhtml-body to help customize displayed
	messages when using the showhtml option.

2021-10-13 @AverageGuy
	* Hypermail wasn't compiling under ubuntu due to the order of
	where -lm appeared when linking libraries.

2021-10-11 Jose Kahan
	* src/string.c src/proto.h src/parse.c
	Hypermail uses C-lib functions, such as isspace() and sscanf(),
	that  don't understand unicode spaces. As a workaround, we're
	converting those spaces to ascii ones so that the parts of hypermail
	that depend on those functions, such as link scanning will continue
	to work.

2021-10-01 Jose Kahan
	* src/threadprint.c src/print.c src/lang.h
	Improve the thread index and next in thread links. If a thread's node
	is deleted, don't display it unless it has non-deleted children.
	In this case, display it using MSG_DEL_SHORT for its name.
	Make the next in thread links skip deleted nodes.

2021-09-16 Jose Kahan
	* src/print.c
	The default MESSAGE_DELETE text was being displayed twice in deleted
	messages, once in the header, and again in the body. This message will